k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moteskollen-service
  namespace: moteskollen
  labels:
    app: moteskollen
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: moteskollen
